[package]
name = "inquire_test"
version = "0.1.0"
edition = "2021"
authors = ["Walter Bonetti <walter.bonetti@epitech.eu>"]
license = "MIT"
description = "inquire_derive helps inquire integration and maintenance"
keywords = ["inquire", "derive"]
include = ["src/**/*.rs", "crates-io.md", "README.md", "LICENSE"]
repository = "https://github.com/IniterWorker/inquire_derive"
readme = "crates-io.md"

[dependencies]
inquire = { version = "0.4", features = ["date", "editor"] }
chrono = { version = "0.4" }

[dev-dependencies]
inquire = { version = "0.4" }
inquire_derive = { path = "../inquire_derive" }

[[example]]
name = "skip"
path = "example/skip.rs"

[[example]]
name = "text"
path = "example/text.rs"

[[example]]
name = "select"
path = "example/select.rs"

[[example]]
name = "confirm"
path = "example/confirm.rs"

[[example]]
name = "password"
path = "example/password.rs"

[[example]]
name = "date_select"
path = "example/date_select.rs"

[[example]]
name = "multi_select"
path = "example/multi_select.rs"

[[example]]
name = "demo"
path = "example/demo.rs"

[[example]]
name = "editor"
path = "example/editor.rs"

[[example]]
name = "custom_type"
path = "example/custom_type.rs"

[[example]]
name = "form"
path = "example/form.rs"